fer-de-lance/tests/negative/invalid_fun_missing_name.snek
(defn () (add1 4))
(add1 4)
